About Me page changes

--- a/index.html
+++ b/index.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Me</title>
-        <!-- <link rel="stylesheet" href="css/reset.css">  -->
+        <title>Nilesh Ranjan</title>
+        <link rel="stylesheet" href="css/reset.css"> 
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <section>
-                <h1>Nilesh Ranjan</h1>
-                <p>Application Engineer</p>
-            </section>
+            Welcome to my page!
         </header>
-        <ul>
-            <li><a href="https://www.imdb.com" target="_blank">My Movie List</a></li>
-            <li><a href="https://www.nba.com/" target="_blank">My Games List</a></li>           
-        </ul>
         <main>
-            <h2>Projects:</h2>
-            <ol>
-                <li>Amazon Echo</li>
-                <li>Amazon Alexa</li>
-            </ol>
-            <h2>Skills:</h2>
-            <ol>
-                <li>PeopleSoft</li>
-                <li>Java</li>
-            </ol>
+            <section>
+                <nav>
+                    <ul>
+                        <li><a href="#">Music I Love</a></li>
+                        <li><a href="#">Sports I Play</a></li>
+                        <li><a href="#">Movies I watch</a></li>
+                        <li><a href="#">My Learning Resources</a></li>
+                        <li><a href="#">Contact Me</a></li>
+                    </ul>
+                </nav>
+            </section>
+            <img src = "img/batman.jpg"> 
+            <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deserunt recusandae ullam in accusantium omnis ut assumenda vel quaerat, consequatur soluta. Corrupti aliquam aut dolore! Molestias rerum reprehenderit laboriosam exercitationem?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi quaerat in aliquid amet cupiditate, doloribus exercitationem. Cupiditate numquam totam dolore libero nostrum natus maiores deserunt dolores, repudiandae tempora unde consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat repellendus, provident iste suscipit molestias, facilis eius officia ab molestiae voluptatum incidunt non nobis perspiciatis laudantium illum dolore ut voluptas magni?Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quo, natus asperiores laborum esse eligendi qui vero rem facere tempore non reprehenderit distinctio dolorum! Enim modi minus voluptate ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error fugiat eum dolorum quod cumque eos impedit esse dolore delectus deserunt dignissimos, at minima sint iusto, atque, tempora necessitatibus sit natus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque laborum neque accusantium, iste cum amet iusto. Sequi voluptate voluptatum quae eius mollitia soluta, ipsa expedita aut officia quis atque fugiat. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti tempora fuga harum? Ipsa architecto rerum esse praesentium sint. A, eius nemo! Repellendus, expedita earum facilis maxime reiciendis rem nostrum sequi?. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias molestiae amet ipsam inventore officiis dignissimos possimus neque minima, aliquam pariatur odit beatae id voluptate maiores nam atque sapiente debitis fuga. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi unde neque accusantium ex fugiat dolore magnam quasi ad tenetur at nisi deserunt similique numquam laboriosam maxime, voluptas quia consectetur porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam nostrum praesentium eaque iusto ratione eum mollitia deserunt quibusdam quaerat perferendis. Quisquam nemo rem soluta quo sit nisi. Nulla, illum laborum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore voluptas minima distinctio laborum id atque neque suscipit qui quos eaque et quod velit porro, blanditiis cupiditate quasi doloribus praesentium laboriosam?</article>
         </main>
         <script src="js/app.js"></script>
-        <footer>
-            <p>@Nilesh Ranjan</p>
-        </footer>
+        <footer>@Nilesh Ranjan - 2019</footer>       
     </body>
 </html>
